changes to use case